<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">



<EditText
        android:id="@+id/goal"
        android:layout_margin="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:hint="@string/InputGoal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/startdate"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:text="@string/StartDate"
        android:textSize="18dp"
        app:layout_constraintEnd_toStartOf="@+id/editstartdate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goal" />

    <EditText
        android:id="@+id/editstartdate"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:clickable="true"
        android:focusable="false"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/startdate"
        app:layout_constraintTop_toBottomOf="@+id/goal" />

    <TextView
        android:id="@+id/enddate"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:text="@string/EndDate"
        android:textSize="18dp"
        app:layout_constraintEnd_toStartOf="@+id/editenddate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startdate" />

    <EditText
        android:id="@+id/editenddate"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:clickable="true"
        android:focusable="false"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/enddate"
        app:layout_constraintTop_toBottomOf="@+id/editstartdate" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="306dp"
        android:layout_marginLeft="306dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:gravity="center"
        android:text="@string/TimeSetting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editenddate"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/starttime"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:text="@string/StartTime"
        android:textSize="18dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/editstarttime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enddate" />

    <EditText
        android:id="@+id/editstarttime"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:clickable="true"
        android:focusable="false"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/starttime"
        app:layout_constraintTop_toBottomOf="@+id/switch2" />

    <TextView
        android:id="@+id/endtime"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:text="@string/EndTime"
        android:textSize="18dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/editendtime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/starttime" />


    <EditText
        android:id="@+id/editendtime"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:clickable="true"
        android:focusable="false"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/endtime"
        app:layout_constraintTop_toBottomOf="@+id/editstarttime" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:text="@string/CategorySetting"
        app:layout_constraintEnd_toStartOf="@+id/category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endtime" />

    <TextView
        android:id="@+id/category"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/editendtime" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="52dp"
        android:backgroundTint="#473536"
        android:textColor="#ffffff"
        android:text="@string/Save"
        android:background="@drawable/login_button_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancel" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="52dp"
        android:gravity="center"
        android:backgroundTint="#473536"
        android:background="@drawable/login_button_background"
        android:textColor="#ffffff"
        android:text="@string/Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/save"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>